Adding more python facts.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -968,7 +968,7 @@
     "\n",
     "The intricacies of static vs. instance variables are covered in the **Caveats** notebook. Basically, the static ones are shared state in the class itself and become templates for instances to be stamped from.\n",
     "\n",
-    "Notice also that **all methods are virtual** in Python - there is no keyword for it like C++/Java/etc. You don't even have to say you're overriding - just give a method with the same name and it's done.\n"
+    "Notice also that **all methods are virtual** in Python - there is no keyword for it like C++/Java/etc. You don't even have to say you're overriding - just give a method with the same name and it's done. That means you can __override any built-in or library method__ as long as you __forward all args__ (`*args, **kwargs`) to not break the inheritence chain or lose the base behavior."
    ]
   },
   {
@@ -1182,12 +1182,12 @@
    "source": [
     "# Diamond Inheritance\n",
     "\n",
-    "Rather than a singleton of A shared by B and C, we just get B's version because it comes first in D's inheritance list. This is known as **MRO** (method resolution order)."
+    "Rather than a singleton of A shared by B and C, we just get B's version because it comes first in D's inheritance list. This is known as **MRO** (method resolution order). It is not strictly __BFS nor DFS__ but rather uses a fancy algorithm known as __C3 Linearization__.  The order depends on whether common ancestors are shared. In general, without shared ancestors, it is DFS, but within a shared ancestor becomes BFS on the children."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "d89a0523",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B's common method\n"
+      "B's common method\n",
+      "C's other common method\n"
      ]
     }
    ],
@@ -1206,6 +1207,8 @@
     "        print(\"A's common method\")\n",
     "\n",
     "\n",
+    "    def common_method_2(self):\n",
+    "        print(\"A's other common method\")\n",
     "class B(A):\n",
     "\n",
     "    def common_method(self):\n",
@@ -1216,6 +1219,10 @@
     "\n",
     "    def common_method(self):\n",
     "        print(\"C's common method\")\n",
+    "        \n",
+    "    def common_method_2(self):\n",
+    "        print(\"C's other common method\")\n",
+    "\n",
     "\n",
     "\n",
     "class D(B, C):\n",
@@ -1223,7 +1230,8 @@
     "\n",
     "\n",
     "d = D()\n",
-    "d.common_method()"
+    "d.common_method()\n",
+    "d.common_method_2()"
    ]
   },
   {
@@ -2107,10 +2115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "id": "3031fc5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List\n",
     "my_list = []\n",
@@ -2140,6 +2159,7 @@
     "del my_dict['a']  # Remove element with a specific key\n",
     "my_dict.pop('b')  # Remove and return element with a specific key\n",
     "my_dict.clear()  # Remove all elements from the dictionary\n",
+    "my_dict.setdefault('b', 300) # Set key to value only if not present - then return current value either way\n",
     "\n",
     "# Note: These are just some of the common methods. There are more methods available for each collection."
    ]
