--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -625,6 +625,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35b639cc",
+   "metadata": {},
+   "source": [
+    "Subclass static members override (and are independent of) base class static members, and instance members override those."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0bfef6f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all static\n",
+      "1\n",
+      "2\n",
+      "100\n",
+      "200\n",
+      "\n",
+      "derived instance\n",
+      "0\n",
+      "2\n",
+      "100\n",
+      "-1\n",
+      "1000\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BaseClass:\n",
+    "    x = 1\n",
+    "    y = 2\n",
+    "    \n",
+    "class DerivedClass(BaseClass):\n",
+    "    x = 100\n",
+    "    y = 200\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.x = 1000 # no effect on BaseClass.x or DerivedClass.x\n",
+    "        BaseClass.x = 0 # no effect on DerivedClass.x or self.x\n",
+    "        DerivedClass.y = -1 # no effect on BaseClass.y\n",
+    "        \n",
+    "print('all static')\n",
+    "print(BaseClass.x)\n",
+    "print(BaseClass.y)\n",
+    "print(DerivedClass.x)\n",
+    "print(DerivedClass.y)\n",
+    "print()\n",
+    "\n",
+    "print('derived instance')\n",
+    "d = DerivedClass()\n",
+    "print(BaseClass.x)\n",
+    "print(BaseClass.y)\n",
+    "print(DerivedClass.x)\n",
+    "print(DerivedClass.y)\n",
+    "print(d.x)\n",
+    "print(d.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ae84afd",
    "metadata": {},
    "source": [
