--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1157,7 +1157,7 @@
     "\n",
     "Any attributes directly set on an instance after creation will be used directly.  This allows you to add and replace methods and variables.\n",
     "\n",
-    "Others will be forwarded to the class, which will in turn forward to the base class of that, etc. Because it goes backward and left-to-right, that is how diamond inheritance behavior comes about.  It is __dynamic__, rather than being a clone stamp.  If you modify the class's data after instance creation, instances will see updated values.\n",
+    "Others will be forwarded to the class, which will in turn forward to the base class of that, etc. Because it goes backward and left-to-right, that is how __diamond inheritance__ behavior comes about.  It is __dynamic__, rather than being a clone stamp.  If you modify the class's data after instance creation, instances will see updated values.\n",
     "\n",
     "`super()` is a way to get the superclass of the current class to call a method from the superclass in the derived version."
    ]
