Adding more details about logging and decorators.

--- a/python/Decorators.ipynb
+++ b/python/Decorators.ipynb
@@ -401,9 +401,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa8a52a7",
+   "metadata": {},
+   "source": [
+    "# @functools.wraps\n",
+    "\n",
+    "Although the `@` operator rebinds the name, it does __not transfer metadata__ such as the internal function name, the docstring, etc.\n",
+    "\n",
+    "To do that, you must use `@functools.wraps` to __forward the metadata__ onto the wrapper that you return. Your decorators should pretty much always do that.\n",
+    "\n",
+    "In the case of a factory that takes args, make sure to use the wraps annotation on the __final inner wrapper__ that will be returned by `@`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5748a1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrapper\n",
+      "Wrapper docstring\n",
+      "{}\n",
+      "\n",
+      "Before call\n",
+      "Hello, Alice!\n",
+      "After call\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def my_decorator(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        \"\"\"Wrapper docstring\"\"\"\n",
+    "        print(\"Before call\")\n",
+    "        result = func(*args, **kwargs)\n",
+    "        print(\"After call\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def greet(name: str):\n",
+    "    \"\"\"Say hello\"\"\"\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "\n",
+    "print(greet.__name__)   # wrapper 😬\n",
+    "print(greet.__doc__)    # Wrapper docstring 😬\n",
+    "print(greet.__annotations__)  # {} 😬\n",
+    "print()\n",
+    "greet('Alice') # the fn name still works in code even though __name__ is wrong!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6803abab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greet\n",
+      "Say hello\n",
+      "{'name': <class 'str'>}\n",
+      "\n",
+      "Before call\n",
+      "Hello, Alice!\n",
+      "After call\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def my_decorator(func):\n",
+    "    @functools.wraps(func)   # 👈 this copies over metadata\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        \"\"\"Wrapper docstring\"\"\"\n",
+    "        print(\"Before call\")\n",
+    "        result = func(*args, **kwargs)\n",
+    "        print(\"After call\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def greet(name: str):\n",
+    "    \"\"\"Say hello\"\"\"\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "\n",
+    "print(greet.__name__)   # greet ✅\n",
+    "print(greet.__doc__)    # Say hello ✅\n",
+    "print(greet.__annotations__)  # {'name': <class 'str'>} ✅\n",
+    "print()\n",
+    "greet('Alice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fe6a25be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add\n",
+      "Add two numbers\n",
+      "\n",
+      "Calling add with (2, 3), {}\n",
+      "add returned 5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def my_decorator(verbose=False):  # 👈 outer function (takes decorator args)\n",
+    "    def decorator(func):          # 👈 real decorator\n",
+    "        @functools.wraps(func)    # 👈 copy func metadata\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            if verbose:\n",
+    "                print(f\"Calling {func.__name__} with {args}, {kwargs}\")\n",
+    "            result = func(*args, **kwargs)\n",
+    "            if verbose:\n",
+    "                print(f\"{func.__name__} returned {result}\")\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "@my_decorator(verbose=True)\n",
+    "def add(x, y):\n",
+    "    \"\"\"Add two numbers\"\"\"\n",
+    "    return x + y\n",
+    "\n",
+    "print(add.__name__)   # ✅ \"add\"\n",
+    "print(add.__doc__)    # ✅ \"Add two numbers\"\n",
+    "print()\n",
+    "print(add(2, 3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501f20fb",
+   "id": "55433f95",
    "metadata": {},
    "outputs": [],
    "source": []
