--- a/python/Logging.ipynb
+++ b/python/Logging.ipynb
@@ -615,6 +615,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22812f2f",
+   "metadata": {},
+   "source": [
+    "# Filters\n",
+    "\n",
+    "Filters are objects with a `.filter()` method that you instantiate and pass into __handlers__ or __loggers__. If `filter()` returns `False`, the message is dropped at that handler and/or logger.\n",
+    "\n",
+    "__WARNING__: you must restart the kernel before running this cell if you ran any others (including this one)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9a9489de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "this is SECURE CONSOLE data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "class KeywordFilter(logging.Filter):\n",
+    "    def __init__(self, keyword):\n",
+    "        self.keyword = keyword\n",
+    "        \n",
+    "    def filter(self, record):\n",
+    "        return self.keyword in record.getMessage()\n",
+    "\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "\n",
+    "# Console handler\n",
+    "ch = logging.StreamHandler()\n",
+    "ch.setLevel(logging.DEBUG)\n",
+    "\n",
+    "# Attach filter to handler\n",
+    "ch.addFilter(KeywordFilter('SECURE'))\n",
+    "\n",
+    "logger.addHandler(ch)\n",
+    "\n",
+    "# Attach filter to logger\n",
+    "logger.addFilter(KeywordFilter('CONSOLE'))\n",
+    "\n",
+    "logger.debug(\"this is SECURE CONSOLE data\")   # ✅ printed\n",
+    "logger.debug(\"this is CONSOLE data\")   # ❌ not printed\n",
+    "logger.debug(\"this is SECURE data\")   # ❌ not printed\n",
+    "logger.debug(\"this is normal data\")   # ❌ not printed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7b8d7a6",
    "metadata": {},
    "source": [
@@ -666,9 +723,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abe3f803",
+   "metadata": {},
+   "source": [
+    "# dictConfig()\n",
+    "\n",
+    "You can use `dictconfig()` to configure everything (loggers/handlers/filters/formatters/etc) all in one place. This is the way it's done in __Django settings__ for instance.\n",
+    "\n",
+    "Most of it is pretty self-explanatory except for the peculiar format of __filter__:\n",
+    "  - `()` represents saying what the callable filter class is\n",
+    "  - then the other args (`keyword` in this case) are the arguments to the __constructor__\n",
+    "  \n",
+    "Other things worth noting:\n",
+    "  - `root` logger is configured in its own key instead of in `loggers` but otherwise looks the same\n",
+    "  - `disable_existing_loggers` means that loggers not configured here will be disable (such as ones from libraries) \n",
+    "  - `logging` doesn't have built-in filters (but frameworks like Django often do)\n",
+    "\n",
+    "Even though you'd expect to be able to rerun the cell and get the same result since it reconfigures everything, it doesn't seem to work that way.  I'm not sure why - it might be a Jupyter specific nuance instead of a real-world app thing.\n",
+    "\n",
+    "__WARNING__: you must restart the kernel before running this cell if you ran any others (including this one)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "789677af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - DEBUG - this is SECURE data\n",
+      "app.special - DEBUG - this is SECURE CONSOLE data\n",
+      "app.other - DEBUG - this is SECURE data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "import logging.config\n",
+    "\n",
+    "# --- Custom filter (same as your original) ---\n",
+    "class KeywordFilter(logging.Filter):\n",
+    "    def __init__(self, keyword):\n",
+    "        super().__init__()\n",
+    "        self.keyword = keyword\n",
+    "\n",
+    "    def filter(self, record):\n",
+    "        return self.keyword in record.getMessage()\n",
+    "\n",
+    "\n",
+    "# --- dictConfig setup ---\n",
+    "LOGGING = {\n",
+    "    \"version\": 1,\n",
+    "    \"disable_existing_loggers\": False, # allow library loggers to work too\n",
+    "\n",
+    "    # Define filters and pass parameters via dictConfig\n",
+    "    \"filters\": {\n",
+    "        \"only_secure\": {\n",
+    "            \"()\": \"__main__.KeywordFilter\",   # import path to the filter class\n",
+    "            \"keyword\": \"SECURE\",              # argument to __init__\n",
+    "        },\n",
+    "        \"only_console\": {\n",
+    "            \"()\": \"__main__.KeywordFilter\",\n",
+    "            \"keyword\": \"CONSOLE\",\n",
+    "        },\n",
+    "    },\n",
+    "\n",
+    "    \"formatters\": {\n",
+    "        \"simple\": {\"format\": \"%(name)s - %(levelname)s - %(message)s\"},\n",
+    "    },\n",
+    "\n",
+    "    \"handlers\": {\n",
+    "        \"console\": {\n",
+    "            \"class\": \"logging.StreamHandler\",\n",
+    "            \"level\": \"DEBUG\",\n",
+    "            \"formatter\": \"simple\",\n",
+    "            # Filter on the HANDLER: require \"SECURE\"\n",
+    "            \"filters\": [\"only_secure\"],\n",
+    "        },\n",
+    "    },\n",
+    "\n",
+    "    # Two loggers:\n",
+    "    # 1) Root logger (inherits console handler; only \"SECURE\" filter applies via handler)\n",
+    "    # 2) Non-root \"app.special\" logger (has an extra logger-level filter \"CONSOLE\")\n",
+    "    \"loggers\": {\n",
+    "        \"app.special\": {\n",
+    "            \"handlers\": [\"console\"],\n",
+    "            \"level\": \"DEBUG\",\n",
+    "            \"propagate\": False,\n",
+    "            # Filter on the LOGGER: require \"CONSOLE\"\n",
+    "            \"filters\": [\"only_console\"],\n",
+    "        },\n",
+    "    },\n",
+    "\n",
+    "    \"root\": {\n",
+    "        \"handlers\": [\"console\"],\n",
+    "        \"level\": \"DEBUG\",\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "logging.config.dictConfig(LOGGING)\n",
+    "\n",
+    "# --- Usage / Demo ---\n",
+    "\n",
+    "root = logging.getLogger()                 # root logger\n",
+    "special = logging.getLogger(\"app.special\") # non-root logger with extra filter\n",
+    "other = logging.getLogger(\"app.other\")     # another non-root logger (no extra filter)\n",
+    "\n",
+    "# Root logger: only the handler's \"SECURE\" filter applies\n",
+    "root.debug(\"this is SECURE data\")        # ✅ printed\n",
+    "root.debug(\"this is CONSOLE data\")       # ❌ not printed (missing SECURE)\n",
+    "root.debug(\"this is normal data\")        # ❌ not printed\n",
+    "\n",
+    "# app.special: must satisfy BOTH filters (\"CONSOLE\" at logger level AND \"SECURE\" at handler)\n",
+    "special.debug(\"this is SECURE CONSOLE data\")  # ✅ printed\n",
+    "special.debug(\"this is CONSOLE data\")         # ❌ not printed (fails handler's SECURE)\n",
+    "special.debug(\"this is SECURE data\")          # ❌ not printed (fails logger's CONSOLE)\n",
+    "special.debug(\"this is normal data\")          # ❌ not printed\n",
+    "\n",
+    "# app.other: no logger-level filter; messages propagate to root -> only \"SECURE\" on handler\n",
+    "other.debug(\"this is SECURE data\")        # ✅ printed (passes handler filter via root)\n",
+    "other.debug(\"this is CONSOLE data\")       # ❌ not printed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725310bd",
+   "id": "240ec632",
    "metadata": {},
    "outputs": [],
    "source": []
