Adding info about method decorators.

--- a/python/Decorators.ipynb
+++ b/python/Decorators.ipynb
@@ -550,9 +550,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16274a93",
+   "metadata": {},
+   "source": [
+    "# Methods vs. Functions\n",
+    "\n",
+    "When you decorate a method of a class, you are decorating the __unbound method__ (which means it's a function that has a `self` param).\n",
+    "\n",
+    "when called as a __bound method__, the `self` param will automatically be filled in, as with any other method. The code returned by the decorator still sees it like it's unbound, but you call it as bound in the client code.\n",
+    "\n",
+    "The 2nd snippet below shows a sample implementation for Django's `@method_decorator`, though the real thing is quite a bit more sophisticated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "55433f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[function]\n",
+      "args: (100, 200)\n",
+      "kwargs: {}\n",
+      "\n",
+      "[static method]\n",
+      "args: (100, 200)\n",
+      "kwargs: {}\n",
+      "\n",
+      "[instance method]\n",
+      "args: (<__main__.MyClass object at 0x10867fa00>, 100, 200)\n",
+      "kwargs: {}\n",
+      "\n",
+      "[unbound instance method]\n",
+      "args: (<__main__.MyClass object at 0x10867fa00>, 100, 200)\n",
+      "kwargs: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_decorator(fn):\n",
+    "    def _my_decorator(*args, **kwargs):\n",
+    "        print('args:', args)\n",
+    "        print('kwargs:', kwargs)\n",
+    "        fn(*args, **kwargs)\n",
+    "    return _my_decorator\n",
+    "\n",
+    "@my_decorator\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "class MyClass:\n",
+    "    @my_decorator\n",
+    "    @staticmethod\n",
+    "    def add(x, y):\n",
+    "        return x + y\n",
+    "    \n",
+    "    @my_decorator\n",
+    "    def multiply(self, x, y):\n",
+    "        return x * y\n",
+    "\n",
+    "print('[function]')\n",
+    "add(100, 200)\n",
+    "print('\\n[static method]')\n",
+    "MyClass.add(100, 200)\n",
+    "print('\\n[instance method]')\n",
+    "m = MyClass()\n",
+    "m.multiply(100, 200)\n",
+    "print('\\n[unbound instance method]')\n",
+    "f = MyClass.multiply\n",
+    "f(m, 100, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a868c0f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "args: (100, 200)\n",
+      "kwargs: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import types\n",
+    "\n",
+    "def my_decorator(fn):\n",
+    "    def _my_decorator(*args, **kwargs):\n",
+    "        print('args:', args)\n",
+    "        print('kwargs:', kwargs)\n",
+    "        fn(*args, **kwargs)\n",
+    "    return _my_decorator\n",
+    "\n",
+    "def method_decorator(decorator):\n",
+    "    # decorator is a function that takes a top-level function and returns another of the same form\n",
+    "    # we want to return a new function that can be called on an unbound method of a class\n",
+    "    # which will allow us to pass a decorator as an arg and decorate a method with the result\n",
+    "    def _ret(unbound_method):\n",
+    "        # this is a decorator function that takes an unbound method (with self) and returns another\n",
+    "        # we want to return a new function that looks like it is an unbound class method\n",
+    "        def _inner_ret(self, *args, **kwargs):\n",
+    "            # this has the structure of an unbound class method\n",
+    "            # we will bind the original method to the first arg so it pretends to be a top-level function\n",
+    "            # we will then decorate it with the original decorator and call the decorated version\n",
+    "            fn = types.MethodType(unbound_method, self)\n",
+    "            return decorator(fn)(*args, **kwargs)\n",
+    "        return _inner_ret\n",
+    "    return _ret\n",
+    "\n",
+    "class MyClass:\n",
+    "    @method_decorator(my_decorator)\n",
+    "    def multiply(self, x, y):\n",
+    "        return x * y\n",
+    "\n",
+    "m = MyClass()\n",
+    "m.multiply(100, 200) # only see the passed args, not the 'self' arg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55433f95",
+   "id": "c72f77b6",
    "metadata": {},
    "outputs": [],
    "source": []
