Adding info about window.open(), window.close(), and dynamic imports.

--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "e2ceddef",
    "metadata": {},
    "outputs": [
@@ -1295,22 +1295,28 @@
     "}\n",
     "f();\n",
     "\n",
+    "async function g() {\n",
+    "    const {x} = await import('./importable7'); // slight similarity to top-level imports!\n",
+    "    console.log(x); // 0\n",
+    "}\n",
+    "g();\n",
+    "\n",
     "console.log('done'); // this runs before any promises resolve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "c593188f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['start', 'done', 'importing 7', '0', 'hi']"
+       "['start', 'done', 'importing 7', '0', 'hi', '0']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
