--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -2480,9 +2480,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bcb2ca7",
+   "metadata": {},
+   "source": [
+    "# window.open()/window.close()\n",
+    "\n",
+    "- `window.open(url, target?, options?)` opens a new __browser tab__ by default\n",
+    "  - you can specify a `target` other than `_blank` to override that\n",
+    "  - it's effectively a JS anchor tag\n",
+    "  - `options` are __comma-separated__ and can be _names_ or `name=value` format\n",
+    "    - `popup` to make a _popup window_ (as you can't do with anchors)\n",
+    "      - a more minimal version of a normal window\n",
+    "    - `noopener` is like doing `rel=noopener` in an anchor tag\n",
+    "  - you can pass a __query param__ in the URL if you want to tell the window it was opened this way\n",
+    "  - returned object is of type `WindowProxy` (or `null` on failure)\n",
+    "    - members of this proxy will be members of the `Window` instance for the other tab\n",
+    "      - including __global variables__, `window.close()`, __message channel__, etc.\n",
+    "      \n",
+    "- `window.close()` closes the tab for the current document if it is __script-closable__\n",
+    "  - windows opened by `window.open()`\n",
+    "  - windows opened by `<a>` without special _modifier keys_\n",
+    "    - though _open in new tab_ does seem to be script-closable\n",
+    "  - windows opened by modifying the address bar are __not script-closable__ for instance\n",
+    "  - you can call it from the tab itself or from outside by using `WindowProxy`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "258aa7a9",
+   "id": "444fe4f7",
    "metadata": {},
    "outputs": [],
    "source": []
